--- a/Notes/Week6/week6.tex
+++ b/Notes/Week6/week6.tex
@@ -120,5 +120,17 @@
 
 
 
+\section{Chapter 2: Differential Forms}
+\emph{From \textcite{bib:DifferentialForms}.}
+\begin{itemize}
+    \item \marginnote{5/5:}\textbf{Interior product} (of $\bm{v}$ with $\omega$): The $(k-1)$-form on $U$ defined as follows, where $U\subset\R^n$ open, $\bm{v}$ a vector field on $U$, and $\omega\in\ome[k]{U}$. \emph{Denoted by} $\bm{\iota_{\pmb{v}}\omega}$. \emph{Given by}
+    \begin{equation*}
+        p \mapsto \iota_{\bm{v}(p)}\omega_p
+    \end{equation*}
+    \item By definition, $\iota_{\bm{v}(p)}\omega_p\in\lam[k-1]{T_p^*\R^n}$.
+\end{itemize}
+
+
+
 
 \end{document}
