--- a/preamble.tex
+++ b/preamble.tex
@@ -8,7 +8,7 @@
 \usepackage{enumitem}
 \usepackage{tikz}
 \usepackage{amsmath,amssymb,amsbsy,amsthm}
-\usepackage{bm,physics}
+\usepackage{bm,physics,mathtools}
 \usepackage[hidelinks]{hyperref}
 
 \MakeOuterQuote{"}
@@ -42,6 +42,9 @@
 \DeclareMathOperator{\spn}{span}
 \DeclareMathOperator{\id}{id}
 \DeclareMathOperator{\crl}{curl}
+\DeclareMathOperator{\dvv}{div}
+\DeclareMathOperator{\grd}{grad}
+\DeclareMathOperator{\supp}{supp}
 
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\R}{\mathbb{R}}
